<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#18D596"
    tools:context=".GeneralInfoTomatoDesignFT">

    <ImageButton
        android:id="@+id/escape"
        android:layout_width="26.2dp"
        android:layout_height="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/esc_icon_foreground"
        />
    <ImageView
        android:id="@+id/imageTomato"
        android:layout_width="342dp"
        android:layout_height="228dp"
        android:layout_marginTop="85dp"
        android:background="@mipmap/tomato_image_icon_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/title"
        android:text="@string/san_marzano_tomato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/title_style_info"
        app:layout_constraintTop_toBottomOf="@id/imageTomato"
        app:layout_constraintStart_toStartOf="@id/imageTomato"
        />
    <ScrollView
        android:id="@+id/scoll"
        android:layout_width="342dp"
        android:layout_height="470dp"
        app:layout_constraintStart_toStartOf="@id/imageTomato"
        app:layout_constraintEnd_toEndOf="@id/imageTomato"
        app:layout_constraintTop_toBottomOf="@id/title">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text1"
                android:textAppearance="@style/text_style_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plant_overv_tomato"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="13dp"/>
            <TextView
                android:id="@+id/text2"
                android:textAppearance="@style/text_style_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light_requi_tomato" />
            <View
                android:layout_width="match_parent"
                android:layout_height="13dp"/>
            <TextView
                android:id="@+id/text3"
                android:textAppearance="@style/text_style_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/watering_fr_tomato" />
            <View
                android:layout_width="match_parent"
                android:layout_height="13dp"/>
            <TextView
                android:id="@+id/text4"
                android:textAppearance="@style/text_style_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fertilizer_tomato" />
            <View
                android:layout_width="match_parent"
                android:layout_height="13dp"/>
            <TextView
                android:id="@+id/text5"
                android:textAppearance="@style/text_style_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/soil_requir_tomato" />
        </LinearLayout>
    </ScrollView>

    <!-- Navigation Bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tabView"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/calendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/plantView">
            <ImageButton
                android:layout_width="32dp"
                android:layout_height="41.29dp"
                android:background="@drawable/calendar_icon_foreground"
                android:id="@+id/calendarTab"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/calendar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calendar"
                android:textAppearance="@style/tab_text"
                app:layout_constraintTop_toBottomOf="@id/calendarTab"
                app:layout_constraintStart_toStartOf="@id/calendarTab"
                app:layout_constraintEnd_toEndOf="@id/calendarTab"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plantView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <ImageButton
                android:layout_width="32dp"
                android:layout_height="38dp"
                android:background="@drawable/plant_icon_foreground"
                android:id="@+id/plantTab"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <TextView
                android:id="@+id/plants_text"
                android:layout_width="24dp"
                android:layout_height="10dp"
                android:text="Plants"
                android:textAppearance="@style/tab_text"
                app:layout_constraintTop_toBottomOf="@id/plantTab"
                app:layout_constraintStart_toStartOf="@id/plantTab"
                app:layout_constraintEnd_toEndOf="@id/plantTab"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchView"
            app:layout_constraintStart_toEndOf="@id/plantView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <ImageButton
                android:layout_width="35dp"
                android:layout_height="38dp"
                android:background="@drawable/search_icon_active_foreground"
                android:id="@+id/searchTab"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/search_text"
                android:layout_width="27dp"
                android:layout_height="10dp"
                android:text="Search"
                android:textAppearance="@style/tab_text"
                app:layout_constraintTop_toBottomOf="@id/searchTab"
                app:layout_constraintStart_toStartOf="@id/searchTab"
                app:layout_constraintEnd_toEndOf="@id/searchTab" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>